add-item-requests-and-gateway8